@@ -821,23 +821,37 @@ BigDecimal_add(VALUE self, VALUE r)
     ENTER(5);
     Real *c, *a, *b;
     size_t mx;
-    GUARD_OBJ(a,GetVpValue(self,1));
-    b = GetVpValue(r,0);
-    if(!b) return DoSomeOne(self,r,'+');
+
+    GUARD_OBJ(a, GetVpValue(self, 1));
+    if (TYPE(r) == T_FLOAT) {
+	b = GetVpValueWithPrec(r, DBL_DIG+1, 1);
+    }
+    else if (TYPE(r) == T_RATIONAL) {
+	b = GetVpValueWithPrec(r, a->Prec*VpBaseFig(), 1);
+    }
+    else {
+	b = GetVpValue(r,0);
+    }
+
+    if (!b) return DoSomeOne(self,r,'+');
     SAVE(b);
-    if(VpIsNaN(b)) return b->obj;
-    if(VpIsNaN(a)) return a->obj;
-    mx = GetAddSubPrec(a,b);
+
+    if (VpIsNaN(b)) return b->obj;
+    if (VpIsNaN(a)) return a->obj;
+
+    mx = GetAddSubPrec(a, b);
     if (mx == (size_t)-1L) {
-        GUARD_OBJ(c,VpCreateRbObject(VpBaseFig() + 1, "0"));
-        VpAddSub(c, a, b, 1);
-    } else {
-        GUARD_OBJ(c,VpCreateRbObject(mx *(VpBaseFig() + 1), "0"));
-        if(!mx) {
-            VpSetInf(c,VpGetSign(a));
-        } else {
-            VpAddSub(c, a, b, 1);
-        }
+	GUARD_OBJ(c,VpCreateRbObject(VpBaseFig() + 1, "0"));
+	VpAddSub(c, a, b, 1);
+    }
+    else {
+	GUARD_OBJ(c, VpCreateRbObject(mx * (VpBaseFig() + 1), "0"));
+	if(!mx) {
+	    VpSetInf(c, VpGetSign(a));
+	}
+	else {
+	    VpAddSub(c, a, b, 1);
+	}
     }
     return ToValue(c);
 }
